[gd_scene load_steps=15 format=2]

[ext_resource path="res://GodPoolGame/Game/Entities/CelestialCueBall.gd" type="Script" id=1]
[ext_resource path="res://GodPoolGame/Game/Entities/CelestialBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://JamKit/Sequencers/Float/WaveSequencer.gd" type="Script" id=3]
[ext_resource path="res://Assets/cue-ball.png" type="Texture" id=4]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=5]
[ext_resource path="res://JamKit/Feedback/FeedbackRunner.gd" type="Script" id=6]
[ext_resource path="res://GodPoolGame/TestSubjects/PullBackTrail.gd" type="Script" id=7]
[ext_resource path="res://JamKit/Feedback/Transform/TransformFeedback2D.gd" type="Script" id=8]
[ext_resource path="res://GodPoolGame/Components/PullBackComponent.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Hands/hand_low.png" type="Texture" id=10]
[ext_resource path="res://Assets/SFX/flick.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/black-hole-suck.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/planets-collide.ogg" type="AudioStream" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 18.91

[node name="CelestialCueBall" instance=ExtResource( 2 )]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="PullBackComponent" parent="." index="2" instance=ExtResource( 9 )]
max_power_distance = 400.0

[node name="Pointer" type="Sprite" parent="." index="3"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="PullBackTrail" type="Node2D" parent="." index="4"]
position = Vector2( 1, 2 )
script = ExtResource( 7 )

[node name="HandSprite" type="Sprite" parent="PullBackTrail" index="0"]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="FeedbackRunner" type="Node" parent="PullBackTrail" index="1"]
script = ExtResource( 6 )

[node name="TransformFeedback2D" type="Node" parent="PullBackTrail/FeedbackRunner" index="0"]
script = ExtResource( 8 )
TargetPath = NodePath("../../HandSprite")
run_time = 0.1
should_return_to_previous = false

[node name="FlickTimer" type="Timer" parent="PullBackTrail" index="2"]
wait_time = 0.2
one_shot = true

[node name="WaveSequencer" type="Node" parent="." index="5"]
script = ExtResource( 3 )

[node name="FlickSound" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 11 )
volume_db = 19.787
bus = "SFX"

[node name="BlackHoleSuckSound" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 12 )
volume_db = 24.0
bus = "SFX"

[node name="BounceSound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 13 )
volume_db = 24.0
pitch_scale = 1.3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pull_back_released" from="PullBackComponent" to="PullBackTrail" method="_on_PullBackComponent_pull_back_released"]
[connection signal="pulling_back" from="PullBackComponent" to="PullBackTrail" method="_on_PullBackComponent_pulling_back"]
